--- a/index.html
+++ b/index.html
@@ -1052,25 +1052,26 @@
                 <div className="space-y-6">
                     <style>{`
                     @media print {
-                        @page { size: landscape; margin: 3mm; }
-                        body { visibility: hidden; background: white !important; }
+                        @page { size: landscape; margin: 0; }
+                        body { visibility: hidden; background: white !important; -webkit-print-color-adjust: exact; }
                         button, nav, header, .sidebar { display: none !important; }
                         body > *:not(#root) { display: none !important; }
+                        
                         .shift-table-container { 
                             visibility: visible !important; 
-                            position: fixed !important; 
+                            position: absolute !important; /* Changed from fixed for iOS */
                             top: 0 !important; 
                             left: 0 !important; 
-                            width: 100vw !important; 
-                            min-height: 100vh !important; 
-                            background: white !important; 
-                            z-index: 2147483647 !important; 
+                            width: 100% !important; /* Changed from 100vw */
+                            min-width: 1100px !important; /* Force landscape width on mobile */
                             margin: 0 !important; 
                             padding: 5mm !important; 
                             display: block !important; 
                             overflow: visible !important; 
                             zoom: var(--print-scale, 1); 
+                            background: white !important;
                         }
+                        
                         .shift-table-container * { visibility: visible !important; }
                         .no-print { display: none !important; }
                         .print-only { display: block !important; }
