--- a/index.html
+++ b/index.html
@@ -1052,8 +1052,9 @@
                 <div className="space-y-6">
                     <style>{`
                     @media print {
-                        @page { size: landscape; margin: 0; }
-                        body { visibility: hidden; background: white !important; -webkit-print-color-adjust: exact; }
+                        @page { size: landscape; margin: 0mm; }
+                        html, body { height: 0; overflow: hidden; background: white; } /* Collapse main body */
+                        
                         button, nav, header, .sidebar { display: none !important; }
                         body > *:not(#root) { display: none !important; }
                         
@@ -1064,8 +1065,10 @@
                             left: 0 !important; 
                             width: 100% !important; /* Changed from 100vw */
                             min-width: 1100px !important; /* Force landscape width on mobile */
+                            height: auto !important; /* Allow height to fit content */
                             margin: 0 !important; 
                             padding: 5mm !important; 
+                            box-sizing: border-box !important; /* Crucial for padding */
                             display: block !important; 
                             overflow: visible !important; 
                             zoom: var(--print-scale, 1); 
@@ -1210,7 +1213,7 @@
                                             <col key={t} className="min-w-[40px]" style={{ width: `calc(85% / ${timeSlots.length})` }} />
                                         ))}
                                     </colgroup>
-                                    <thead><tr><th className="p-2 border bg-blue-50 text-blue-900 font-bold sticky left-0 z-10 print:static">号車 / 時間</th>{timeSlots.map(time => (<th key={time} className="p-1 border bg-gray-50 font-mono print:static">{time}</th>))}</tr></thead>
+                                    <thead><tr><th className="p-2 border bg-blue-50 text-blue-900 font-bold sticky left-0 z-10 print:static">号車 / 時間</th>{timeSlots.map(time => (<th key={time} className="p-1 border bg-gray-50 font-mono print:static">{time}〜</th>))}</tr></thead>
                                     <tbody className="screen-table-row">
                                         {activeRegisters.map(reg => {
                                             const isFullyClosed = timeSlots.every(t => currentShift?.cells[`${t}-${reg.id}`]?.staffId === CLOSED_SHIFT_ID);
